--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,16 @@
 	.btn-text {
 		@apply text-black bg-transparent hover:bg-[#001E80]/90 hover:text-white transition-all duration-150;
 	}
+
+	.logo-ticker-image {
+		@apply h-8 w-auto;
+	}
+
+	.tag {
+		@apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
+	}
+}
+
+html {
+	scroll-behavior: smooth;
 }
